package edu.ntnu.idi.idatt;

public record AuthorPostCount(Author author, int postCount) {}
